crates/ty_server/tests/e2e/snapshots/e2e__initialize__initialization_with_workspace.snap
---
source: crates/ty_server/tests/e2e/initialize.rs
expression: initialization_result
---
{
  "capabilities": {
    "positionEncoding": "utf-16",
    "textDocumentSync": {
      "openClose": true,
      "change": 2,
      "save": {
        "includeText": false
      }
    },
    "notebookDocumentSync": {
      "notebookSelector": [
        {
          "cells": [
            {
              "language": "python"
            }
          ]
        }
      ],
      "save": false
    },
    "completionProvider": {
      "triggerCharacters": [
        ".",
        "\"",
        "'"
      ]
    },
    "hoverProvider": true,
    "signatureHelpProvider": {
      "triggerCharacters": [
        "(",
        ","
      ],
      "retriggerCharacters": [
        ")"
      ]
    },
    "declarationProvider": true,
    "definitionProvider": true,
    "typeDefinitionProvider": true,
    "implementationProvider": true,
    "referencesProvider": true,
    "documentHighlightProvider": true,
    "documentSymbolProvider": true,
    "codeActionProvider": {
      "codeActionKinds": [
        "quickfix"
      ]
    },
    "workspaceSymbolProvider": true,
    "renameProvider": {
      "prepareProvider": true
    },
    "foldingRangeProvider": true,
    "selectionRangeProvider": true,
    "executeCommandProvider": {
      "commands": [
        "ty.printDebugInformation"
      ],
      "workDoneProgress": false
    },
    "callHierarchyProvider": true,
    "semanticTokensProvider": {
      "legend": {
        "tokenTypes": [
          "namespace",
          "class",
          "parameter",
          "selfParameter",
          "clsParameter",
          "variable",
          "property",
          "function",
          "method",
          "keyword",
          "string",
          "number",
          "decorator",
          "builtinConstant",
          "typeParameter"
        ],
        "tokenModifiers": [
          "definition",
          "readonly",
          "async",
          "documentation"
        ]
      },
      "range": true,
      "full": true
    },
    "typeHierarchyProvider": true,
    "inlayHintProvider": {},
    "diagnosticProvider": {
      "identifier": "ty",
      "interFileDependencies": true,
      "workspaceDiagnostics": true,
      "workDoneProgress": true
    },
    "workspace": {
      "workspaceFolders": {
        "supported": true,
        "changeNotifications": true
      },
      "fileOperations": {
        "willRename": {
          "filters": [
            {
              "scheme": "file",
              "pattern": {
                "glob": "**/*.{py,pyi}",
                "matches": "file"
              }
            },
            {
              "scheme": "file",
              "pattern": {
                "glob": "**",
                "matches": "folder"
              }
            }
          ]
        }
      }
    }
  },
  "serverInfo": {
    "name": "ty",
    "version": "Unknown"
  }
}
