crates/ty_server/tests/e2e/snapshots/e2e__initialize__open_files_diagnostic_registration_without_configuration.snap
---
source: crates/ty_server/tests/e2e/initialize.rs
expression: registration
---
{
  "id": "ty/textDocument/diagnostic",
  "method": "textDocument/diagnostic",
  "registerOptions": {
    "documentSelector": null,
    "identifier": "ty",
    "interFileDependencies": true,
    "workDoneProgress": false,
    "workspaceDiagnostics": false
  }
}
