crates/ty_server/tests/e2e/snapshots/e2e__initialize__workspace_diagnostic_registration_disable.snap
---
source: crates/ty_server/tests/e2e/initialize.rs
expression: registration
---
{
  "id": "ty/textDocument/diagnostic",
  "method": "textDocument/diagnostic",
  "registerOptions": {
    "documentSelector": null,
    "identifier": "ty",
    "interFileDependencies": true,
    "workspaceDiagnostics": false
  }
}
